--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://joseph-p-pasaoa.github.io/portfolio_site",
+  "homepage": "http://dev.josephpasaoa.com",
   "name": "portfolio_site",
   "version": "0.1.0",
   "private": true,
